# udacity

./: .gitmodules  README.md
CarND/term1/CarND-Advanced-Lane-Lines/: .~lock.project_report.odt#  calibration.pickle  project_pipeline.py
CarND/term1/CarND-Behavioral-Cloning-P3/: .gitignore  driving_log.csv
CarND/term1/CarND-Canny-Edges-Example/: script.py
CarND/term1/CarND-CarTracking/: writeup_template.md
CarND/term1/CarND-Color-Histogram-Quiz/: color_histogram.py
CarND/term1/CarND-ColorNGradient/: color_and_gradient.py
CarND/term1/CarND-Fitting-Polynomials-Quiz/: main.cpp
CarND/term1/CarND-Keras-Convolutions-lab/: keras_Convolutions.ipynb
CarND/term1/CarND-Keras-Dropout-Quiz/: keras_Dropout.ipynb
CarND/term1/CarND-Keras-Lab/: traffic-sign-classification-with-keras-solution.ipynb
CarND/term1/CarND-LeNet-Lab/: LeNet-Lab.ipynb
CarND/term1/CarND-Other/: ROI.py  canny_threshold.py  check_protobuf.py  color_histogram_3D.py  fill_protobuf.py  hough.py  mask_threshold.py  project1.py  read_protobuf.py
CarND/term1/CarND-Spatial-Binning-Quiz/: spatial_bin.py
CarND/term1/CarND-Traffic-Sign-Classifier-P2/: Traffic_Sign_Classifier.html  Traffic_Sign_Classifier.ipynb  checkpoint  traffic_signs.data-00000-of-00001  traffic_signs.index
CarND/term1/CarND-Vehicle-Detection/: pipeline.py  project_readme.odt
CarND/term1/other/: canny.py  mask_threshold_color.py  quiz.py  sandbox.py  threshold_lanes.py
CarND/term2/CarND-Extended-Kalman-Filter-Project/: CMakeLists.txt
CarND/term2/CarND-Gaussian-Sampling/: print_samples.cpp
CarND/term2/CarND-Global-Kinematic-Model/: CMakeLists.txt  main.cpp
CarND/term2/CarND-Global-Kinematic-Model/src/: global_kinematic_model.cpp
CarND/term2/CarND-Localizatin-Observeration-Quiz/: observation1.cpp
CarND/term2/CarND-Localization-Association-Quiz/: helpers.cpp
CarND/term2/CarND-Localization-Observeration-Quiz/: observation2.cpp  observation3.cpp
CarND/term2/CarND-MPC-Project/: README.md
CarND/term2/CarND-MPC2Line/: MPC.cpp  MPC.h
CarND/term2/CarND-Motion-Model-Calculation-Quiz/: main.cpp
CarND/term2/CarND-Oversimplified-Localization-Example/: simple_1D_localization.py
CarND/term2/CarND-P-Controller-Quiz/: PID_controller_solution.py  P_controller_solution.py
CarND/term2/CarND-PD-Controller-Quiz/: snippet.py
CarND/term2/CarND-PID-Control-Project/: README.md
CarND/term2/CarND-PID-Controller-Quiz/: solution.py
CarND/term2/CarND-Particle-Weights/: multiv_gauss.h
CarND/term2/quizzes/CarND-Ful-Markov-Localization-Filter-Quiz/: CMakeLists.txt
CarND/term2/quizzes/CarND-Ful-Markov-Localization-Filter-Quiz/src/: markov_localization.cpp
CarND/term2/quizzes/CarND-Gaussian-Sampling/: CMakeLists.txt  print_samples.cpp
CarND/term2/quizzes/CarND-Localization-Observeration-Quiz/: CMakeLists.txt
CarND/term2/quizzes/CarND-Localization-Observeration-Quiz/src/: observation1.cpp  observation2.cpp  observation3.cpp
CarND/term2/quizzes/CarND-Observation-Model-Quiz/: CMakeLists.txt  main.cpp
CarND/term2/quizzes/CarND-Particle-Weights/: CMakeLists.txt
CarND/term2/quizzes/CarND-Particle-Weights/src/: multiv_gauss.cpp
CarND/term3/quizzes/CarND-Hybrid-A-Star-Cpp/: CMakeLists.txt
CarND/term3/quizzes/CarND-Hybrid-A-Star-Cpp/src/: hybrid_breadth_first.cpp  hybrid_breadth_first.h
CarND/term3/quizzes/CarND-Polynomial-Solver/: CMakeLists.txt
(+115 files in other folders)
